# Beacon-Device

./: .gitignore  README.md
.github/workflows/: release.yml
components/beacon_device/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
components/beacon_device/beaconConnection/: IBeaconConnection.hpp  TcpMqttBeaconConnection.hpp
components/beacon_device/config/: Config.hpp  DeviceProfile.hpp  NvsSettingsStore.cpp  NvsSettingsStore.hpp  Settings.hpp
components/beacon_device/consumer/: ConsumerGroup.cpp  ConsumerGroup.hpp  IConsumer.hpp  IDisplayConsumer.cpp  IDisplayConsumer.hpp  ILutConsumer.hpp  ITextRenderer.hpp  SimpleRGBConsumer.hpp  WS2812Consumer.hpp
components/beacon_device/consumer/display/: CYDDisplayConsumer.cpp  CYDDisplayConsumer.hpp  Hub75LvglDisplayConsumer.cpp  Hub75LvglDisplayConsumer.hpp  ILvglDisplayConsumer.cpp  ILvglDisplayConsumer.hpp  Ili9341LvglDisplayConsumer.cpp  Ili9341LvglDisplayConsumer.hpp
components/beacon_device/consumer/display/fonts/: helvatica_130.c  helvatica_140.c  helvatica_60.c
components/beacon_device/httpServer/: EspHttpServer.cpp  HttpHandlers.cpp  HttpHandlers.hpp
components/beacon_device/networkConnection/: IEthernetConnection.hpp  INetworkConnection.hpp  StaWifiConnection.cpp  StaWifiConnection.hpp
components/beacon_device/orchestrator/: IOrchestrator.cpp  IOrchestrator.hpp  NodeOrchestrator.hpp  SateliteOrchestrator.cpp  SateliteOrchestrator.hpp
components/beacon_device/orchestrator/handlers/: TallyHandler.hpp
components/beacon_device/orchestrator/handlers/alert/: TallyHandler.hpp
components/beacon_device/orchestrator/handlers/colorPatternMap/: DefaultColorAlertPatternMap.hpp  IColorAlertPatternMap.hpp
components/beacon_device/platform/: Platform.cpp  Platform.hpp
components/beacon_device/types/: AlertTypes.hpp  TallyTypes.hpp  TextTypes.hpp
components/beacon_device/ui/: index.html
satelites/CYD/CYD-Satelite/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig.defaults
satelites/CYD/CYD-Satelite/main/: CMakeLists.txt  beacon_app.cpp  beacon_app.h  config.cpp  config.h  idf_component.yml  interfaces.h  led_controller.cpp  led_controller.h  led_layout.cpp  led_layout.h  led_pattern.h  main.cpp  mqtt_manager.cpp  mqtt_manager.h  web_server.cpp  web_server.h  wifi_manager.cpp  wifi_manager.h
satelites/CYD/CYD-Satelite/main/beaconConnection/: IBeaconConnection.hpp  TcpMqttBeaconConnection.hpp
satelites/CYD/CYD-Satelite/main/config/: Config.cpp  Config.hpp  ISettingsStore.hpp  NvsSettingsStore.cpp  Settings.hpp
satelites/CYD/CYD-Satelite/main/consumer/: CYDDisplayConsumer.cpp  CYDDisplayConsumer.hpp  IConsumer.hpp  IDisplayConsumer.cpp  IDisplayConsumer.hpp  ISmartConsumer.cpp  SimpleRGBConsumer.hpp  WS2812Consumer.hpp
satelites/CYD/CYD-Satelite/main/consumer/lvgl/fonts/: helvatica_100.c  helvatica_120.c  helvatica_80.c
satelites/CYD/CYD-Satelite/main/httpServer/: EspHttpServer.hpp  HttpHandlers.cpp  HttpHandlers.hpp
satelites/CYD/CYD-Satelite/main/networkConnection/: IWifiConnection.hpp  StaWifiConnection.cpp  StaWifiConnection.hpp
satelites/CYD/CYD-Satelite/main/orchestrator/: IOrchestrator.hpp  NodeOrchestrator.hpp  SateliteOrchestrator.cpp  SateliteOrchestrator.hpp
satelites/CYD/CYD-Satelite/main/ui/: ui.css  ui.js
satelites/Huidu/HD-WF2/: CMakeLists.txt  sdkconfig.defaults
satelites/Huidu/HD-WF2/main/: CMakeLists.txt  board_config.h  idf_component.yml  lvgl_demo_ui.c  main.cpp
satelites/Synapt/Satelite-Pro/: CMakeLists.txt  sdkconfig.defaults
satelites/Synapt/Satelite-Pro/main/: main.cpp
